tests/._pyaudioop_install.txt
== install pyaudioop ==
ERROR: Could not find a version that satisfies the requirement pyaudioop (from versions: none)
ERROR: No matching distribution found for pyaudioop
== verify pydub import ==
Traceback (most recent call last):
  File "D:\Dropbox\Projects\AV-cleaner\app\venv\Lib\site-packages\pydub\utils.py", line 14, in <module>
    import audioop
ModuleNotFoundError: No module named 'audioop'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<string>", line 1, in <module>
    import pydub; from pydub import AudioSegment; print('pydub ok')
    ^^^^^^^^^^^^
  File "D:\Dropbox\Projects\AV-cleaner\app\venv\Lib\site-packages\pydub\__init__.py", line 1, in <module>
    from .audio_segment import AudioSegment
  File "D:\Dropbox\Projects\AV-cleaner\app\venv\Lib\site-packages\pydub\audio_segment.py", line 11, in <module>
    from .utils import mediainfo_json, fsdecode
  File "D:\Dropbox\Projects\AV-cleaner\app\venv\Lib\site-packages\pydub\utils.py", line 16, in <module>
    import pyaudioop as audioop
ModuleNotFoundError: No module named 'pyaudioop'
